--- a/index.html
+++ b/index.html
@@ -94,12 +94,13 @@
           <div id="int" class="container p-4 anchor">
           <h1 class="text-white">Introduction</h1>
           <p class="text-white-50">
-            In the application of outdoor mobile robotics and autonomous driving, it is universally recognized that the long-term robustness and stability of learning-based depth prediction under various environments has been the bottleneck of lifelong trustworthy autonomy <i>(badino2011visual,Sattler2018CVPR)</i>. Although monocular depth prediction has been well studied recently in the research community, however, there is little work on robust depth prediction across different environments, e.g. changing illumination and seasons, which is owing to the lack of a diverse real-world dataset containing various scenarios and the corresponding benchmark.
+            Long-term robustness of perception under various environments has been the bottleneck of lifelong trustworthy autonomy in the application of outdoor mobile robotics and autonomous driving. Although monocular depth prediction has been well studied as a typical perception task, there is little work on robust depth prediction across different environments, e.g. changing illumination and seasons, which is owing to the lack of a diverse real-world dataset containing various scenarios and the corresponding benchmark.
+             To this end, we introduce <b> the SeasonDepth Prediction Challenge</b> as the first open-source challenge focusing on depth prediction performance under different environmental conditions.              
           </p>
-          <p class="text-white-50"> In order to raise attention among the ICRA community to solve the challenging lifelong learning-based depth prediction problem, we plan to organize the SeasonDepth Prediction Challenge based on our new monocular depth prediction dataset, <a href="https://arxiv.org/abs/2011.04408">SeasonDepth</a>, which contains multi-traverse outdoor images from changing environments. It is also the first depth prediction dataset with diverse road scenes to benchmark the depth prediction performance under different environmental conditions. 
-            To the best of our knowledge, we are the first to quantitatively evaluate the accuracy and robustness of monocular depth prediction across dramatically changing environments, setting up two tracks for both supervised learning and self-supervised learning-based methods. We believe our competition will contribute to flourish the long-term robust perception research among the ICRA community with our dataset and benchmark.</p>
+          <p class="text-white-50"> The SeasonDepth Prediction Challenge is based on our new monocular depth prediction dataset, <a href="https://seasondepth.github.io/">SeasonDepth</a>, which contains multi-traverse outdoor images from changing environments. 
+            To quantitatively evaluate the accuracy and robustness of monocular depth prediction across dramatically changing environments, we set up two tracks with 7 slices of training set under 12 different environmental conditions, using both mean and variance of performance as evaluation metrics. We believe our competition will contribute to flourish the long-term robust perception research among the research community with our dataset and benchmark.</p>
           <h1 class="text-white" id="tra">Tracks</h1>
-          <p class="text-white-50">In this competition, we propose to host two tracks --- one <i>supervised learning track</i> and one <i>self-supervised learning track</i>.</p>
+          <p class="text-white-50">In this competition, we propose to host two tracks --- one <i>supervised learning track</i> and one <i>self-supervised learning track</i> for both supervised learning and self-supervised learning-based methods. We also provide high-quality demonstrations as a <a href="https://github.com/SeasonDepth/SeasonDepth/tree/master/tutorial">tutorial</a> for some baseline algorithms. </p>
           <div class="row row-cols-1 row-cols-md-2 mb-3 text-center align-content-center">
 			  <div class="col">
         <div class="card rounded-3 shadow-sm">
@@ -125,7 +126,6 @@
             <h3>Self-Supervised Learning Track</h3>
             <ul class="list-unstyled mt-3 mb-4">
               <li>Only monocular image sequences are used for model training without the supervision of depth maps</li>
-			  <li>Note: the grading metrics are scaleless for relative depth values, which is compatible to the self-supervised learning-based methods.</li>
             </ul>
 			  
             <button type="button" class="w-100 btn btn-lg btn-warning">Get started</button>
@@ -133,9 +133,9 @@
         </div>
       </div></div>
 			  <h1 class="text-white" id="eva">Evaluation</h1>
-			  <p class="text-white-50">For the training set and validation set of the challenge, RGB images and depth ground truth have been released on <a href="https://seasondepth.github.io/">https://seasondepth.github.io/</a>.
-For the test set, only RGB images will be released, and the corresponding ground truth is retained and used to evaluate the submissions in the challenge. The training and validation set contain 7 multi-environment slices of images, and we leave one slice as the test set for the challenge under 12 different environments. For the purpose of proposal review, the test set for the challenge including RGB images and depth ground truth can be found on <a href="https://drive.google.com/file/d/17Ia-esYfPQ9zmNOvPeOfCZjENuDBph_W/view?usp=sharing">a temporal private cloud storage</a>.
-All participants will be given a training set and a validation set for the training purpose in each competition track, and we set no limits on other third-party public datasets or pretrained models in the competition. Each individual participant will be graded based on 6 metrics in SeasonDepth benchmark of the test set. The evaluation code and instructions can be found on <a href="https://github.com/SeasonDepth/SeasonDepth">https://github.com/SeasonDepth/SeasonDepth</a>.</p>
+			  <p class="text-white-50">The RGB images and depth ground truth have been released for the <a href="https://figshare.com/articles/dataset/SeasonDepth_Cross-Season_Monocular_Depth_Prediction_Training_Dataset/16442025">training set</a> and  <a href="https://figshare.com/articles/dataset/SeasonDepth_Cross-Season_Monocular_Depth_Prediction_Dataset/14731323">validation set</a> of the challenge.
+For the test set of the challenge, only RGB images will be released, and the corresponding ground truth is retained and used to evaluate the submissions in the challenge. The training and validation set contain 7 multi-environment slices of images under 12 different environments, and we leave one additional slice as the test set for the challenge. 
+Besides our released training and validation set, we set no limits on other third-party public datasets or pretrained models in the competition. Each individual participant will be graded based on 6 metrics in SeasonDepth benchmark of the test set. The evaluation code and instructions can be found on <a href="https://github.com/SeasonDepth/SeasonDepth">https://github.com/SeasonDepth/SeasonDepth</a> for the convenience of participants to evaluate the performance themselves before submission to our challenge website. Note that the grading metrics are scaleless for relative depth values, which are compatible for both  supervised and self-supervised learning-based methods.</p>
 <h1 class="text-white" id="awa">Awards</h1>
 <div class="row row-cols-1 row-cols-md-2 mb-3 text-center align-content-center">
   <div class="col">
@@ -175,12 +175,12 @@ All participants will be given a training set and a validation set for the train
           <div id="timeline-content">
 <ul class="timeline">
   <li class="event" data-date="Now">
-      <h3>Dataset Released</h3>
-      <p>Now availabe on<a href="https://seasondepth.github.io/">Github</a></p>
+      <h3>Training Dataet Released</h3>
+      <p>Now availabe <a href="https://seasondepth.github.io/">here</a></p>
     </li>
     <li class="event" data-date="Time TBD">
-      <h3>Registration Deadline</h3>
-      <p>Sign-up <a href="#sign">here</a></p>    
+      <h3>Releasing Test Set</h3>
+      <p>Announce on the website and sign-up <a href="#sign">here</a> to receive notification</p>    
     </li>
     <li class="event" id="date" data-date="Time TBD">
       <h3>Submission Deadline</h3>
@@ -198,21 +198,21 @@ All participants will be given a training set and a validation set for the train
           <div class="container text-center p-3">
             <!-- Three columns of text below the carousel -->
             <div class="row">
-              <div class="col-lg-3"> <img src="IMG_5851.JPG" class="rounded-circle" width="140">
+              <div class="col-lg-3"> <img src="hanjiang.png" class="rounded-circle" width="140">
                 <h2>Hanjiang Hu</h2>
                 <p>Ph.D. @ Carnegie Mellon University</p>
 </div>
               <!-- /.col-lg-4 -->
-              <div class="col-lg-3"> <img src="IMG_5851.JPG" class="rounded-circle" width="140">
+              <div class="col-lg-3"> <img src="jiacheng.png" class="rounded-circle" width="140">
                 <h2>Jiacheng Zhu</h2>
                 <p>Ph.D. @ Carnegie Mellon University</p>
 </div>
               <!-- /.col-lg-4 -->
-              <div class="col-lg-3"> <img src="IMG_5851.JPG" class="rounded-circle" width="140">
+              <div class="col-lg-3"> <img src="zuxin.jpg" class="rounded-circle" width="140">
                 <h2>Zuxin Liu</h2>
                 <p>Ph.D. @ Carnegie Mellon University</p>
 </div>
-              <div class="col-lg-3"> <img src="IMG_5851.JPG" class="rounded-circle" width="140">
+              <div class="col-lg-3"> <img src="wenhao.jpg" class="rounded-circle" width="140">
                 <h2>Wenhao Ding</h2>
                 <p>Ph.D. @ Carnegie Mellon University</p>
 </div>
@@ -223,23 +223,23 @@ All participants will be given a training set and a validation set for the train
           <div class="container text-center p-3">
             <!-- Three columns of text below the carousel -->
             <div class="row">
-              <div class="col-lg-3"> <img src="IMG_5851.JPG" class="rounded-circle" width="140">
-                <h2>Zhijian Qiao</h2>
-                <p>Masters @ Shanghai Jiao Tong University</p>
-</div>
               <!-- /.col-lg-4 -->
-              <div class="col-lg-3"> <img src="IMG_5851.JPG" class="rounded-circle" width="140">
-                <h2>Baoquan Yang</h2>
-                <p>Masters @ Shanghai Jiao Tong University</p>
-</div>
-              <!-- /.col-lg-4 -->
-              <div class="col-lg-3"> <img src="IMG_5851.JPG" class="rounded-circle" width="140">
+              <div class="col-lg-3"> <img src="shuai.png" class="rounded-circle" width="140">
                 <h2>Shuai Wang</h2>
-                <p>Masters @ Carnegie Mellon University</p>
+                <p>Master @ Carnegie Mellon University</p>
 </div>
-              <div class="col-lg-3"> <img src="IMG_5851.JPG" class="rounded-circle" width="140">
+              <div class="col-lg-3"> <img src="jiarun.JPG" class="rounded-circle" width="140">
                 <h2>Jiarun Wei</h2>
-                <p>Masters @ Carnegie Mellon University</p>
+                <p>Master @ Carnegie Mellon University</p>
+</div>
+              <div class="col-lg-3"> <img src="zhijian.jpg" class="rounded-circle" width="140">
+                <h2>Zhijian Qiao</h2>
+                <p>Master @ Shanghai Jiao Tong University</p>
+</div>
+              <!-- /.col-lg-4 -->
+              <div class="col-lg-3"> <img src="baoquan.jpg" class="rounded-circle" width="140">
+                <h2>Baoquan Yang</h2>
+                <p>Undergraduate @ Shanghai Jiao Tong University</p>
 </div>
               <!-- /.col-lg-4 -->
             </div>
@@ -248,12 +248,12 @@ All participants will be given a training set and a validation set for the train
           <div class="container marketing p-3">
             <!-- Three columns of text below the carousel -->
             <div class="row">
-              <div class="col-lg-6"> <img src="IMG_5851.JPG" class="rounded-circle mx-auto d-block" width="140">
+              <div class="col-lg-6"> <img src="ding.jpg" class="rounded-circle mx-auto d-block" width="140">
                 <h2 class="text-center">Ding Zhao</h2>
                 <p class="text-center">Assistant Professor @ Carnegie Mellon University</p>
 </div>
               <!-- /.col-lg-4 -->
-              <div class="col-lg-6"> <img src="IMG_5851.JPG" class="rounded-circle d-block mx-auto" width="140">
+              <div class="col-lg-6"> <img src="hesheng.png" class="rounded-circle d-block mx-auto" width="140">
                 <h2 class="text-center">Heshang Wang</h2>
                 <p class="text-cen text-center">Professor @&nbsp; Shanghai Jiao Tong University</p>
 </div>
