--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </p>
           <p class="text-white-50"> The SeasonDepth Prediction Challenge is based on our new monocular depth prediction dataset, <a href="https://seasondepth.github.io/">SeasonDepth</a>, which contains multi-traverse outdoor images from changing environments. 
             To quantitatively evaluate the accuracy and robustness of monocular depth prediction across dramatically changing environments, we set up two tracks with 7 slices of training set under 12 different environmental conditions, using both mean and variance of performance as evaluation metrics. We believe our competition will contribute to flourish the long-term robust perception research among the research community with our dataset and benchmark.</p>
-          <h1 class="text-white" id="tra">Tracks</h1>
+          <h1 class="text-white" id="tra">Challenge Tracks</h1>
           <p class="text-white-50">In this competition, we propose to host two tracks --- one <i>supervised learning track</i> and one <i>self-supervised learning track</i> for both supervised learning and self-supervised learning-based methods. We also provide high-quality demonstrations as a <a href="https://github.com/SeasonDepth/SeasonDepth/tree/master/tutorial">tutorial</a> for some baseline algorithms. </p>
           <div class="row row-cols-1 row-cols-md-2 mb-3 text-center align-content-center">
 			  <div class="col">
@@ -135,7 +135,7 @@
 			  <h1 class="text-white" id="eva">Evaluation</h1>
 			  <p class="text-white-50">The RGB images and depth ground truth have been released for the <a href="https://figshare.com/articles/dataset/SeasonDepth_Cross-Season_Monocular_Depth_Prediction_Training_Dataset/16442025">training set</a> and  <a href="https://figshare.com/articles/dataset/SeasonDepth_Cross-Season_Monocular_Depth_Prediction_Dataset/14731323">validation set</a> of the challenge.
 For the test set of the challenge, only RGB images will be released, and the corresponding ground truth is retained and used to evaluate the submissions in the challenge. The training and validation set contain 7 multi-environment slices of images under 12 different environments, and we leave one additional slice as the test set for the challenge. 
-Besides our released training and validation set, we set no limits on other third-party public datasets or pretrained models in the competition. Each individual participant will be graded based on 6 metrics in SeasonDepth benchmark of the test set. The evaluation code and instructions can be found on <a href="https://github.com/SeasonDepth/SeasonDepth">https://github.com/SeasonDepth/SeasonDepth</a> for the convenience of participants to evaluate the performance themselves before submission to our challenge website. Note that the grading metrics are scaleless for relative depth values, which are compatible for both  supervised and self-supervised learning-based methods.</p>
+Besides our released training and validation set, we set no limits on other third-party public datasets or pretrained models in the competition. Each individual participant will be graded based on 6 metrics in SeasonDepth benchmark of the test set. The evaluation code and instructions can be found on <a href="https://github.com/SeasonDepth/SeasonDepth">evaluation toolkit</a> for the convenience of participants to evaluate the performance themselves before submission to our challenge website. Note that the grading metrics are scaleless for relative depth values, which are compatible for both  supervised and self-supervised learning-based methods.</p>
 <h1 class="text-white" id="awa">Awards</h1>
 <div class="row row-cols-1 row-cols-md-2 mb-3 text-center align-content-center">
   <div class="col">
@@ -232,14 +232,14 @@ Besides our released training and validation set, we set no limits on other thir
                 <h2>Jiarun Wei</h2>
                 <p>Master @ Carnegie Mellon University</p>
 </div>
-              <div class="col-lg-3"> <img src="zhijian.jpg" class="rounded-circle" width="140">
-                <h2>Zhijian Qiao</h2>
-                <p>Master @ Shanghai Jiao Tong University</p>
-</div>
               <!-- /.col-lg-4 -->
               <div class="col-lg-3"> <img src="baoquan.jpg" class="rounded-circle" width="140">
                 <h2>Baoquan Yang</h2>
                 <p>Undergraduate @ Shanghai Jiao Tong University</p>
+</div>
+              <div class="col-lg-3"> <img src="zhijian.jpg" class="rounded-circle" width="140">
+                <h2>Zhijian Qiao</h2>
+                <p>Master @ Shanghai Jiao Tong University</p>
 </div>
               <!-- /.col-lg-4 -->
             </div>
