Correct Hesheng name

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Besides our released training and validation set, we set no limits on other thir
 </div>
               <!-- /.col-lg-4 -->
               <div class="col-lg-6"> <img src="hesheng.png" class="rounded-circle d-block mx-auto" width="140">
-                <h2 class="text-center">Heshang Wang</h2>
+                <h2 class="text-center">Hesheng Wang</h2>
                 <p class="text-cen text-center">Professor @&nbsp; Shanghai Jiao Tong University</p>
 </div>
               <!-- /.col-lg-4 -->
