--- a/index.html
+++ b/index.html
@@ -198,24 +198,28 @@ Besides our released training and validation set, we set no limits on other thir
           <div class="container text-center p-3">
             <!-- Three columns of text below the carousel -->
             <div class="row">
-              <div class="col-lg-3"> <img src="hanjiang.png" class="rounded-circle" width="140">
+              <div class="col-lg"> <img src="hanjiang.png" class="rounded-circle" width="140">
                 <h2>Hanjiang Hu</h2>
-                <p>Ph.D. @ Carnegie Mellon University</p>
+                <p>Ph.D. @ CMU</p>
 </div>
               <!-- /.col-lg-4 -->
-              <div class="col-lg-3"> <img src="jiacheng.png" class="rounded-circle" width="140">
+              <div class="col-lg"> <img src="jiacheng.png" class="rounded-circle" width="140">
                 <h2>Jiacheng Zhu</h2>
-                <p>Ph.D. @ Carnegie Mellon University</p>
+                <p>Ph.D. @ CMU</p>
 </div>
               <!-- /.col-lg-4 -->
-              <div class="col-lg-3"> <img src="zuxin.jpg" class="rounded-circle" width="140">
+              <div class="col-lg"> <img src="zuxin.jpg" class="rounded-circle" width="140">
                 <h2>Zuxin Liu</h2>
-                <p>Ph.D. @ Carnegie Mellon University</p>
+                <p>Ph.D. @ CMU</p>
 </div>
-              <div class="col-lg-3"> <img src="wenhao.jpg" class="rounded-circle" width="140">
+              <div class="col-lg"> <img src="wenhao.jpg" class="rounded-circle" width="140">
                 <h2>Wenhao Ding</h2>
-                <p>Ph.D. @ Carnegie Mellon University</p>
+                <p>Ph.D. @ CMU</p>
 </div>
+              <div class="col-lg"> <img src="linyi.png" class="rounded-circle" width="140">
+                <h2>Linyi Li</h2>
+                <p>Ph.D. @ UIUC</p>
+              </div>
               <!-- /.col-lg-4 -->
             </div>
             <!-- /.row -->
@@ -226,20 +230,20 @@ Besides our released training and validation set, we set no limits on other thir
               <!-- /.col-lg-4 -->
               <div class="col-lg-3"> <img src="shuai.png" class="rounded-circle" width="140">
                 <h2>Shuai Wang</h2>
-                <p>Master @ Carnegie Mellon University</p>
+                <p>Master @ CMU</p>
 </div>
               <div class="col-lg-3"> <img src="jiarun.JPG" class="rounded-circle" width="140">
                 <h2>Jiarun Wei</h2>
-                <p>Master @ Carnegie Mellon University</p>
+                <p>Master @ CMU</p>
 </div>
               <!-- /.col-lg-4 -->
               <div class="col-lg-3"> <img src="baoquan.jpg" class="rounded-circle" width="140">
                 <h2>Baoquan Yang</h2>
-                <p>Undergraduate @ Shanghai Jiao Tong University</p>
+                <p>Undergraduate @ SJTU</p>
 </div>
               <div class="col-lg-3"> <img src="zhijian.jpg" class="rounded-circle" width="140">
                 <h2>Zhijian Qiao</h2>
-                <p>Master @ Shanghai Jiao Tong University</p>
+                <p>Master @ SJTU</p>
 </div>
               <!-- /.col-lg-4 -->
             </div>
@@ -248,15 +252,19 @@ Besides our released training and validation set, we set no limits on other thir
           <div class="container marketing p-3">
             <!-- Three columns of text below the carousel -->
             <div class="row">
-              <div class="col-lg-6"> <img src="ding.jpg" class="rounded-circle mx-auto d-block" width="140">
+              <div class="col-lg"> <img src="ding.jpg" class="rounded-circle mx-auto d-block" width="140">
                 <h2 class="text-center">Ding Zhao</h2>
-                <p class="text-center">Assistant Professor @ Carnegie Mellon University</p>
+                <p class="text-center">Assistant Professor @ CMU</p>
 </div>
               <!-- /.col-lg-4 -->
-              <div class="col-lg-6"> <img src="hesheng.png" class="rounded-circle d-block mx-auto" width="140">
+              <div class="col-lg"> <img src="hesheng.png" class="rounded-circle d-block mx-auto" width="140">
                 <h2 class="text-center">Hesheng Wang</h2>
-                <p class="text-cen text-center">Professor @&nbsp; Shanghai Jiao Tong University</p>
+                <p class="text-cen text-center">Professor @&nbsp; SJTU</p>
 </div>
+              <div class="col-lg"> <img src="bo.png" class="rounded-circle d-block mx-auto" width="140">
+                <h2 class="text-center">Bo Li</h2>
+                <p class="text-cen text-center">Assistant Professor @&nbsp; UIUC</p>
+              </div>
               <!-- /.col-lg-4 -->
               <!-- /.col-lg-4 -->
             </div>
